Fix code highlight not not stretch as wide as container issue

--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -4,6 +4,7 @@
   margin: block-margin 0
 
 .article-inner
+  position: relative;
   @extend $block
   material-z-index: 1
   material-hover-z-index: 2
